<resources>
    <string name="app_name">Istentapp</string>
    <string-array name="priority_values">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
    </string-array>

    <string-array name="sort_types">
        <item>Priority</item>
        <item>Date</item>
        <item>Name</item>
    </string-array>

    <string-array name="sort_order">
        <item>Ascendant</item>
        <item>Descendant</item>
    </string-array>

    <string-array name="chart_types">
        <item>Priority chart</item>
        <item>Status chart</item>
    </string-array>

    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>

    <string name="infoActivity_repositoryLink"> Check my <a href = "https://github.com/Zacomo/Istentu">repository</a></string>
    <string name="infoActivity_message_title">Why \"Istentapp\"?</string>
    <string name="infoActivity_author">Author: Zacomo</string>
    <string name="drawerMenu_sort">Sort</string>
    <string name="drawerMenu_filter">Filter</string>
    <string name="drawerMenu_addClass">Add new class</string>
    <string name="drawerMenu_removeClass">Remove a class</string>
    <string name="drawerMenu_notificationsPreferences">Notifications preferences</string>
    <string name="drawerMenu_usageCharts">Check usage charts</string>
    <string name="drawerMenu_info">Info</string>

    <string name="mainActivity">Tasks</string>
    <string name="postpone_date_text">Pick a date</string>
    <string name="postpone_time_text">Pick a time</string>
    <string name="done_text">Done</string>
    <string name="drawerLayout_menu_text">Menu</string>
    <string name="addDialog_nameActivityHint">Insert task name</string>
    <string name="addDialog_priority_text">Priority:</string>
    <string name="addDialog_class_text">Class:</string>
    <string name="addDialog_date_text">Pick a date</string>
    <string name="addDialog_time_text">Pick a time</string>
    <string name="addDialog_descriptionActivity_hint">Insert a description</string>
    <string name="sortDialog_sortBy_text">Sort by:</string>
    <string name="mainActivity_insertData_success">Task added!</string>
    <string name="mainActivity_moreInfoDialog_title">What do you want to do with</string>
    <string name="mainActivity_moreInfoDialog_ModifyTask">Modify task</string>
    <string name="mainActivity_moreInfoDialog_setAsRunning">Set as \"running\"</string>
    <string name="mainActivity_moreInfoDialog_setAsDone">Set as \"done\"</string>
    <string name="mainActivity_moreInfoDialog_setAsWaiting">Set as \"waiting\"</string>
    <string name="cancel_text">Cancel</string>
    <string name="mainActivity_filterDialog_title">Filter by class</string>
    <string name="mainActivity_filterDialog_message">Choose the class you\'re interested in</string>
    <string name="mainActivity_filterDialog_notCompleted">Not completed</string>
    <string name="mainActivity_filterDialog_completed">Completed</string>
    <string name="mainActivity_filterDialog_all">All</string>
    <string name="mainActivity_addClassDialog_title">New class</string>
    <string name="mainActivity_addClassDialog_message">Insert the name of the new class:</string>
    <string name="mainActivity_addClassDialog_classAlreadyExists">Class already inserted!</string>
    <string name="mainActivity_removeDialog_title">Remove class</string>
    <string name="mainActivity_removeDialog_message">Choose the class you want to remove:</string>
    <string name="mainActivity_notificationPreferencesDialog_title">Notifications filter by priority</string>
    <string name="mainActivity_notificationPreferencesDialog_message">Choose minimum priority needed for a task to send a notification</string>
    <string name="infoActivity_title">Info on Istentapp</string>
    <string name="infoActivity_message">Istentapp is composed by <i>\"Istèntu\"</i> + app.\n
The sardinian word istèntu comes from <i>\"istèntare\"</i>, which means waiting, being late, to waste time.\n
However <i>\"s\'istèntu\"</i> was a trick used by parents to keep their kids entertained, so that they won\'t create any problem: it consisted in sending the child (or the children) to a relative\'s house by telling the kids <i>\"go to aunt Maria and tell her to give you \"s\'istèntu\"\"</i>.\n
Istèntu means \"waste of time\" and the child, unfamiliar with the term, expects something material which will never come.\n
In fact, after a while (even several hours), between child\'s requests of giving him s\'istèntu and the corresponding aunt\'s answers \"wait, I\'m looking for it\", the woman will send his nephew/niece at his/her home saying: \"I don\'t have any, we\'ve run out of it"; at this point though, the child has already spent several hours away, allowing his parent to complete his commitment without any trouble.\n\n
I\'ve decided to use this name for both my origins and the fact that I think this is a tool that helps keeping any distraction away.
    </string>
    <string name="recyclerViewAdapter_priority_text">Priority:</string>
    <string name="recyclerViewAdapter_removeDialog_title">Delete Task</string>
    <string name="recyclerViewAdapter_removeDialog_message">Are you sure you want to delete</string>
    <string name="affirmative_text">Yes</string>
    <string name="negative_text">No</string>
    <string name="recyclerViewAdapter_taskStatusText_status">Status:</string>
    <string name="recyclerViewAdapter_taskStatusText_waiting">waiting</string>
    <string name="recyclerViewAdapter_taskStatusText_running">running</string>
    <string name="recyclerViewAdapter_taskStatusText_completedOn">Completed on</string>
    <string name="recyclerViewAdapter_taskStatusText_completedAt">at</string>
    <string name="recyclerViewAdapter_taskDueText_deadline">Deadline:</string>
    <string name="usageGraphActivity_priorityPieChart_chartTitle">Task distribution by priority (P)</string>
    <string name="usageGraphActivity_priorityPieChart_chartLegendTitle">Priority</string>
    <string name="usageGraphActivity_statusPieChart_chartTitle">Distribution tasks by status</string>
    <string name="usageGraphActivity_statusPieChart_chartLegendTitle">Status</string>
    <string name="recyclerViewAdapter_taskStatusText_completed">completed</string>
    <string name="addDialog_dialogTitle">New task</string>
    <string name="addDialog_nameActivityMissing">Task not added: name missing</string>
    <string name="usageGraphActivity_header_text">Usage Graphs</string>
    <string name="postponeTaskActivity_header_title">Postpone task</string>
    <string name="sortDialog_title_text">Sort tasks</string>
    <string name="alertReceiver_notificationMessage">is due today!</string>
    <string name="alertReceiver_notificationAction_postpone_text">Postpone</string>
    <string name="alertReceiver_notificationAction_setAsRunning_text">Set as running</string>
    <string name="alertReceiver_notificationAction_setAsDone_text">Already done</string>

</resources>
