<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sort"
        android:title="@string/drawerMenu_sort"/>
    <item
        android:id="@+id/filter"
        android:title="@string/drawerMenu_filter"/>
    <item
        android:id="@+id/addClass"
        android:title="@string/drawerMenu_addClass"/>
    <item
        android:id="@+id/removeClass"
        android:title="@string/drawerMenu_removeClass"/>
    <item
        android:id="@+id/notificationPreferences"
        android:title="@string/drawerMenu_notificationsPreferences"/>
    <item
        android:id="@+id/usageGraph"
        android:title="@string/drawerMenu_usageCharts"/>
    <item
        android:id="@+id/info"
        android:title="@string/drawerMenu_info"/>

</menu>