<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/editRelativeLayout"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/infoActivityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoActivity_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/infoActivityAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoActivity_author"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <TextView
            android:id="@+id/infoActivityRepository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoActivity_repositoryLink"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <TextView
            android:id="@+id/infoActivityMessageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoActivity_message_title"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/infoActivityMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/infoActivity_message"
            android:layout_marginTop="-8dp"
            android:padding="16dp"
            android:textSize="20sp"/>

    </LinearLayout>
</ScrollView>