<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostponeTaskActivity">


    <RelativeLayout
        android:id="@+id/postponeActivityHeaderRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/postponeActivityHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:titleTextColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </RelativeLayout>


    <TextView
        android:id="@+id/textViewPostponeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"
        android:text="@string/postpone_date_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postponeActivityHeaderRelativeLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPostponeDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="120dp"
        android:src="@drawable/ic_date_range_black_24dp"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postponeActivityHeaderRelativeLayout" />

    <TextView
        android:id="@+id/textViewPostponeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postpone_time_text"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPostponeDate"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPostponeTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_access_time_black_24dp"
        android:layout_marginStart="120dp"
        app:layout_constraintTop_toBottomOf="@+id/fabPostponeDatePicker"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:fabSize="normal"/>

    <Button
        android:id="@+id/donePostponeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_text"
        android:textAllCaps="false"
        android:layout_marginTop="144dp"
        android:layout_marginStart="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postponeActivityHeaderRelativeLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>